--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -30,3 +30,12 @@
     letter-spacing: 0.02em;
     text-align: center;
   }
+
+  .gradientBackground {
+    background: linear-gradient(
+      81deg,
+      #e7f0ff 9.01%,
+      rgba(232, 241, 255, 0.47) 89.11%
+    );
+  }
+  
