--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -1,5 +1,27 @@
+.selectContainer {
+  width: 100%;
+  min-width: 300px;
+}
+
+.selectWithBorder {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-radius: 8px 8px 8px 8px;
+}
+
 .form {
   display: flex;
-  gap: 45px;
-  justify-content: space-between;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .form {
+    flex-direction: row;
+    gap: 20px;
+  }
+
+  .selectContainer {
+    width: 50%;
+  }
 }
