--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,25 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 :root {
-  --color: #2aa8ff;
-  --color-section: #e7f0ff;
   --color-white: #ffffff;
-  --color-background: rgba(27, 60, 116, 1);
 }
 
-body {
-  background-color: #e9f0ff;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+* {
   margin: 0;
 }
 
 html,
 body {
   height: 100%;
+}
+
+body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -54,4 +53,27 @@ h6 {
 #root,
 #__next {
   isolation: isolate;
+}
+
+/*Custom Pagination*/
+.swiper-pagination {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  margin-top: 28px;
+  padding-bottom: 5px;
+}
+
+.swiper-pagination-bullet {
+  height: 10px;
+  width: 10px;
+  background: #bcd8e9;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #2aa7ff;
+  outline: 1px solid #2aa7ff;
+  outline-offset: 4px;
 }
